added cat model

--- a/package.json
+++ b/package.json
@@ -1,25 +1,19 @@
 {
-  "name": "burger",
+  "name": "mvc_design",
   "version": "1.0.0",
-  "description": "this application will use mysql and handlebars app to handle the database and routing this will also be deployed using mysql heroku.",
-  "main": "index.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JonFinley211/Burger.git"
-  },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JonFinley211/Burger/issues"
-  },
-  "homepage": "https://github.com/JonFinley211/Burger#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "express-handlebars": "^3.1.0",
-    "mysql": "^2.17.1",
-    "mysql2": "^2.0.0"
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "mysql": "^2.16.0"
+  },
+  "devDependencies": {
+    "handlebars-helper-css": "^0.1.0"
   }
 }
